# romance

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  install.sh
crates/romance-cli/: Cargo.toml
crates/romance-cli/src/: main.rs
crates/romance-cli/src/commands/: activate.rs  add.rs  addon.rs  check.rs  db.rs  destroy.rs  dev.rs  doctor.rs  generate.rs  mod.rs  new.rs  remove.rs  run.rs  test.rs  update.rs
crates/romance-core/: Cargo.toml
crates/romance-core/src/: ai_context.rs  config.rs  entity.rs  lib.rs  license.rs  manifest.rs  relation.rs  scaffold.rs  seed.rs  template.rs  test_runner.rs  updater.rs  utils.rs
crates/romance-core/src/addon/: api_keys.rs  audit_log.rs  cache.rs  dashboard.rs  email.rs  i18n.rs  mod.rs  multitenancy.rs  oauth.rs  observability.rs  search.rs  security.rs  soft_delete.rs  storage.rs  tasks.rs  validation.rs  websocket.rs
crates/romance-core/src/generator/: admin.rs  auth.rs  backend.rs  context.rs  frontend.rs  junction.rs  migration.rs  mod.rs  openapi.rs  orchestrator.rs  plan.rs  types.rs
crates/romance-core/tests/: integration_test.rs
crates/romance-templates/: Cargo.toml
crates/romance-templates/src/: lib.rs
crates/romance-templates/templates/addon/api_keys/: api_keys.rs.tera  migration.rs.tera
crates/romance-templates/templates/addon/audit_log/: AuditLog.tsx.tera  audit.rs.tera  handlers.rs.tera  migration.rs.tera  model.rs.tera
crates/romance-templates/templates/addon/cache/: cache.rs.tera
crates/romance-templates/templates/addon/dashboard/: DevDashboard.tsx.tera  dev_handlers.rs.tera  dev_routes.rs.tera
crates/romance-templates/templates/addon/email/: email.rs.tera  password_reset.rs.tera
crates/romance-templates/templates/addon/i18n/: en.json.tera  i18n.rs.tera  i18n_frontend.ts.tera  ru.json.tera
crates/romance-templates/templates/addon/multitenancy/: add_tenant_to_users_migration.rs.tera  tenant.rs.tera  tenant_handlers.rs.tera  tenant_migration.rs.tera  tenant_model.rs.tera  tenant_routes.rs.tera
crates/romance-templates/templates/addon/oauth/: OAuthButton.tsx.tera  oauth.rs.tera  oauth_handlers.rs.tera  oauth_migration.rs.tera  oauth_routes.rs.tera
crates/romance-templates/templates/addon/observability/: request_id.rs.tera  tracing_setup.rs.tera
crates/romance-templates/templates/addon/search/: SearchBar.tsx.tera  search.rs.tera  search_handler.rs.tera
crates/romance-templates/templates/addon/security/: middleware_mod.rs.tera  rate_limit.rs.tera  security_headers.rs.tera
crates/romance-templates/templates/addon/seed/: seed.rs.tera
crates/romance-templates/templates/addon/soft_delete/: soft_delete.rs.tera
crates/romance-templates/templates/addon/storage/: FileUpload.tsx.tera  storage.rs.tera  upload_handler.rs.tera  upload_routes.rs.tera
crates/romance-templates/templates/addon/tasks/: migration.rs.tera  model.rs.tera  scheduler.rs.tera  tasks.rs.tera
crates/romance-templates/templates/addon/test/: test_helpers.rs.tera
crates/romance-templates/templates/addon/validation/: validate_middleware.rs.tera
crates/romance-templates/templates/addon/websocket/: useWebSocket.ts.tera  ws.rs.tera
crates/romance-templates/templates/admin/backend/: admin_handlers.rs.tera  admin_routes.rs.tera
crates/romance-templates/templates/admin/frontend/: AdminLayout.tsx.tera  Dashboard.tsx.tera  adminRoutes.tsx.tera
crates/romance-templates/templates/auth/backend/: auth.rs.tera  auth_handlers.rs.tera  auth_routes.rs.tera  user_migration.rs.tera  (+1 more)
crates/romance-templates/templates/scaffold/: README.md.tera  romance.production.toml.tera  romance.toml.tera
(+53 files in other folders)
