[workspace]
resolver = "2"
members = [
    "crates/romance-cli",
    "crates/romance-core",
    "crates/romance-templates",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/romance-dev/romance"
homepage = "https://romance.dev"
authors = ["Romance Team <team@romance.dev>"]
