[workspace]
resolver = "2"
members = [
    "crates/romance-cli",
    "crates/romance-core",
    "crates/romance-templates",
]

[workspace.package]
version = "0.2.4"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aliexz011/romance"
homepage = "https://romance.dev"
authors = ["Romance Team <team@romance.dev>"]
